--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-navigation": "^3.11.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
